# AOSPRE

./: .gitignore  AOS_Documentation.docx  BUILD_CMake.md  CMakeLists.txt  LICENSE-CRSIM.txt  LICENSE.txt  README.md  mkdocs.yml
Scanning_Table_Library/: Scanning_LHS_0deg_fore.txt  Scanning_LHS_5deg_fore_30deg_aft.txt  Scanning_LHS_PPI_surveillance.txt  Scanning_RHS_0deg_fore.txt  Scanning_RHS_PPI_surveillance.txt  Scanning_Top_0deg_fore.txt
cmake/: FindNetCDF.cmake
code/: CMakeLists.txt
code/embed-crsim/: CMakeLists.txt  Makefile  ReadConfParameters.F  Scanning_Table_LHS  Scanning_Table_RHS  Surveillance_Scan_Table  crsim_luts_mod.F  crsim_mod.F  extract_apar_wrf.F  kwm_date_utilities.F  module_access_radsim.F  module_access_wrf.F  module_aircraft.F  module_cfradial_output.F  module_configuration.F  module_crsim_wrapper.F  module_external_attitude.F  module_geometry.F  module_llxy.F  module_quicksort.F  module_scanning.F  module_timing_utilities.F  namelist  phys_param_mod.F  wrf_var_mod.F
docs/: AOS_Documentation.docx  AOS_Documentation_V1.0.1.docx  README_AOS.txt  README_AOSPRE.txt  about.md  acquiretables.md  building.md  index.md  namelist.md  preliminaries.md  processing.md  references.md  running.md  scanning_table_library.md  testcase.md
scripts/: RUN_AOS.sh  RUN_AOSPRE.sh  RUN_AOSPRE_test.sh  RUN_AOS_test.sh  cfrad_name.sh  derecho_qsub_example.sh  flight_config  flight_config_auto  flight_planner.sh  flight_planner_auto.sh  namelist_template_auto.rhi  namelist_template_auto.surveillance  run_flight_planner.sh
test/: CONFIG_crsim  flightpath.ascii  namelist.BOT  namelist.LHS  namelist.RHS  namelist.TOP  scanning_bot.txt  wrfout_test_4650.nc  wrfout_test_4660.nc
